--- a/style.css
+++ b/style.css
@@ -6,17 +6,75 @@
   padding: 0;
 }
 
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
 html {
   font-size: 62.5%;
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 100vh;
   font-size: 1.6rem;
   background: linear-gradient(to bottom right, rgb(255, 152, 255), rgb(99, 0, 99));
-  height: 100vh;
+}
+
+.luckiest-guy-regular {
+  font-family: "Luckiest Guy", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.start-end-section {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+}
+
+.start-game {
+  color: rgb(212, 255, 0);
+  margin-bottom: 3rem;
+  font-size: 4.6rem;
+  letter-spacing: 3px;
+  text-shadow: 2px 2px 20px black;
+  font-family: "luckiest Guy";
+}
+
+.start-end button {
+  font-family: "luckiest Guy";
+}
+
+.btn {
+  padding: 1rem 2rem;
+  border-radius: 1rem;
+  border: 1px solid #000; 
+  cursor: pointer;
+  margin: 0 1rem;
+  transition: all 20ms ease;
+  font-size: 2rem;
+}
+
+.btn:hover {
+  /* transform: scale(1.1); */
+}
+
+.btn:active {
+  transform: translateY(.4rem);
+}
+
+.start {
+  background: rgb(0, 255, 0);
+}
+
+.stop {
+  background: rgb(255, 75, 75);
 }
 
 .simon {
@@ -37,16 +95,19 @@ body {
   bottom: 30%;
   z-index: 5;
   border-radius: 100%;
+  box-shadow: 2px 2px 10px black;
+  font-family: "luckiest Guy";
 }
 
 .middle::after {
-  content: "Simon";
+  content: "Made by Andrew";
   color: white;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 4rem;
+  font-size: 1.8rem;
+  text-align: center;
 }
 
 .button {
@@ -62,11 +123,19 @@ body {
   top: 4%;
 }
 
+.yellow-light {
+  box-shadow: 0 0 5rem 1rem white;
+}
+
 .blue {
   background: blue;
   border-radius: 2px 100% 2px 2px;
   right: 4%;
   top: 4%;
+}
+
+.blue-light {
+  box-shadow: 0 0 5rem 1rem white;
 }
 
 .red {
@@ -76,9 +145,17 @@ body {
   bottom: 4%;
 }
 
+.red-light {
+  box-shadow: 0 0 5rem 1rem white;
+}
+
 .green {
   background: green;
   border-radius: 2px 2px 100% 2px;
   right: 4%;
   bottom: 4%;
+}
+
+.green-light {
+  box-shadow: 0 0 5rem 1rem white;
 }
